# src/main/java/school/hei/demo/domain/dto/response/StudentCourseGradeResponse.java
@@ -1,0 +1,18 @@
+package school.hei.demo.domain.dto.response;
+
+import java.util.List;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class StudentCourseGradeResponse {
+  private User user;
+  private CourseResponse course;
+  private List<ExamGradeResponse> exams;
+  private Double average;
+}
